force-app/main/default/objects/Linea_de_Proyecto__c/fields/Tipo_de_ingreso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_ingreso__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por producción</fullName>
                <label>Variable</label>
            </value>
            <value>
                <fullName>Fijo mensual</fullName>
                <label>Monthly fixed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>