force-app/main/default/objects/Linea_de_Proyecto__c/fields/Total_Importe_a_facturar__c.field-meta.xml
<CustomField>
    <fullName>Total_Importe_a_facturar__c</fullName>
    <formula>Importe_a_facturar_1__c + Importe_a_facturar_2__c + Importe_a_facturar_3__c + Importe_a_facturar_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Importe a facturar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>