force-app/main/default/objects/Linea_de_Proyecto__c/fields/UrlForm__c.field-meta.xml
<CustomField>
    <fullName>UrlForm__c</fullName>
    <formula>&apos;6&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UrlForm</label>
    <type>Text</type>
</CustomField>