force-app/main/default/objects/Linea_de_Proyecto__c/fields/Validacion_Crossobject_Preventa__c.field-meta.xml
<CustomField>
    <fullName>Validacion_Crossobject_Preventa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado cuando todos aquellos campos crossobject (usuarios) están validados para preventa. Esto evita el error a la hora de hacer rollups de campos formula</description>
    <label>Validacion Crossobject Preventa</label>
    <type>Checkbox</type>
</CustomField>