force-app/main/default/objects/Linea_de_Proyecto__c/fields/Validado_para_Entregada__c.field-meta.xml
<CustomField>
    <fullName>Validado_para_Entregada__c</fullName>
    <formula>NOT(ISBLANK(TEXT( Gerencia__c ))) &amp;&amp; 
NOT(ISBLANK(TEXT( Area__c ))) &amp;&amp; 
NOT(ISBLANK(TEXT( Tecnologia__c ))) &amp;&amp;
NOT(ISBLANK( Coste_estimado__c )) &amp;&amp;
NOT(ISBLANK( Fecha_Fin__c )) &amp;&amp;
NOT(ISBLANK( Fecha_Inicio__c )) &amp;&amp;
NOT(ISBLANK( Importe_total_2__c )) &amp;&amp;
Validacion_Crossobject_Preventa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Required fields: Management, Area, Technology, Estimated Cost, End Date, Start Date, Gross Margin, Proyect Leader of Presales, Proyect Leader of Execution</inlineHelpText>
    <label>Validado para Entregada</label>
    <type>Checkbox</type>
</CustomField>