force-app/main/default/objects/Linea_de_Proyecto__c/fields/Validado_para_Preventa__c.field-meta.xml
<CustomField>
    <fullName>Validado_para_Preventa__c</fullName>
    <formula>NOT(ISBLANK(TEXT( Gerencia__c ))) &amp;&amp;
NOT(ISBLANK(TEXT( Area__c ))) &amp;&amp; 
NOT(ISBLANK(TEXT( Tecnologia__c ))) &amp;&amp;
Validacion_Crossobject_Preventa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Required fields: Management, Area, Technology, Proyect Leader of Presales</inlineHelpText>
    <label>Validado para Preventa</label>
    <type>Checkbox</type>
</CustomField>