force-app/main/default/objects/Linea_de_Proyecto__c/fields/Venta_Extraordinaria__c.field-meta.xml
<CustomField>
    <fullName>Venta_Extraordinaria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venta Extraordinaria</label>
    <type>Checkbox</type>
</CustomField>