force-app/main/default/objects/Linea_de_Proyecto__c/fields/Work_On_client__c.field-meta.xml
<CustomField>
    <fullName>Work_On_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work On client Office</label>
    <type>Checkbox</type>
</CustomField>