force-app/main/default/objects/Linea_de_Proyecto__c/fields/Working_Model__c.field-meta.xml
<CustomField>
    <fullName>Working_Model__c</fullName>
    <label>Working Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smartworking</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Full Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>