force-app/main/default/objects/Linea_de_Proyecto__c/recordTypes/AM.recordType-meta.xml
<RecordType>
    <fullName>AM</fullName>
    <active>true</active>
    <label>AM</label>
</RecordType>