force-app/main/default/objects/Linea_de_Proyecto__c/recordTypes/Hosting.recordType-meta.xml
<RecordType>
    <fullName>Hosting</fullName>
    <active>true</active>
    <label>Hosting</label>
</RecordType>