force-app/main/default/objects/Linea_de_Proyecto__c/recordTypes/Licencias.recordType-meta.xml
<RecordType>
    <fullName>Licencias</fullName>
    <active>true</active>
    <label>Licencias</label>
</RecordType>