force-app/main/default/objects/Linea_de_Proyecto__c/recordTypes/Licencias_Renovaci_n.recordType-meta.xml
<RecordType>
    <fullName>Licencias_Renovaci_n</fullName>
    <active>true</active>
    <label>Licencias - Renovación</label>
</RecordType>