force-app/main/default/objects/Linea_de_Proyecto__c/recordTypes/Licencias_Servicios.recordType-meta.xml
<RecordType>
    <fullName>Licencias_Servicios</fullName>
    <active>true</active>
    <label>Licencias - Servicios</label>
</RecordType>