force-app/main/default/objects/Linea_de_Proyecto__c/recordTypes/Llave_en_Mano.recordType-meta.xml
<RecordType>
    <fullName>Llave_en_Mano</fullName>
    <active>true</active>
    <label>Llave en Mano</label>
</RecordType>