force-app/main/default/objects/Linea_de_Proyecto__c/recordTypes/Rate_Card.recordType-meta.xml
<RecordType>
    <fullName>Rate_Card</fullName>
    <active>true</active>
    <label>Rate Card</label>
</RecordType>