force-app/main/default/objects/Linea_de_Proyecto__c/recordTypes/TM.recordType-meta.xml
<RecordType>
    <fullName>TM</fullName>
    <active>true</active>
    <label>T&amp;M</label>
</RecordType>