force-app/main/default/objects/Linea_de_Proyecto__c/validationRules/Fechas.validationRule-meta.xml
<ValidationRule>
    <fullName>Fechas</fullName>
    <active>true</active>
    <errorConditionFormula>Fecha_Fin__c &lt; Fecha_Inicio__c</errorConditionFormula>
    <errorMessage>The end date cannot be earlier than the start date</errorMessage>
</ValidationRule>