force-app/main/default/objects/Linea_de_Proyecto__c/validationRules/Llaves.validationRule-meta.xml
<ValidationRule>
    <fullName>Llaves</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  $RecordType.DeveloperName = &quot;AM&quot;,
  ISBLANK(TEXT(Tipo_de_ingreso__c))
)</errorConditionFormula>
    <errorDisplayField>Tipo_de_ingreso__c</errorDisplayField>
    <errorMessage>You must select a value for the &apos;Type of Income&apos; field when the record type is &apos;AM</errorMessage>
</ValidationRule>