force-app/main/default/objects/Linea_de_Proyecto__c/validationRules/Misma_divisa_que_oportunidad.validationRule-meta.xml
<ValidationRule>
    <fullName>Misma_divisa_que_oportunidad</fullName>
    <active>true</active>
    <description>Se comprueba que la divisa siempre sea la misma que la de la oportunidad a la que pertenece</description>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt; TEXT(Oportunidad__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>La divisa debe ser siempre la misma que la utilizada en la oportunidad</errorMessage>
</ValidationRule>