force-app/main/default/objects/Linea_de_Proyecto__c/validationRules/No_TM.validationRule-meta.xml
<ValidationRule>
    <fullName>No_TM</fullName>
    <active>false</active>
    <errorConditionFormula>Oportunidad__r.RecordType.DeveloperName &lt;&gt; &apos;TM&apos; &amp;&amp; RecordType.DeveloperName = &apos;TM&apos;</errorConditionFormula>
    <errorMessage>No es posible añadir una línea de proyecto de tipo T&amp;M en una oportunidad de tipo diferente a T&amp;M.</errorMessage>
</ValidationRule>