force-app/main/default/objects/Linea_de_Proyecto__c/validationRules/Responsable_de_SW.validationRule-meta.xml
<ValidationRule>
    <fullName>Responsable_de_SW</fullName>
    <active>false</active>
    <errorConditionFormula>Responsable_de_LDP__r.Profile.Id != &apos;00e0N000000i4Ke&apos; &amp;&amp; RecordType.DeveloperName = &apos;Licencias&apos; &amp;&amp; NOT(ISBLANK(Responsable_de_LDP__c)) &amp;&amp;  $Profile.Id != &apos;00e0N0000019WkL&apos;</errorConditionFormula>
    <errorDisplayField>Responsable_de_LDP__c</errorDisplayField>
    <errorMessage>El Responsable de la oferta debe ser una persona del departamento de software</errorMessage>
</ValidationRule>