force-app/main/default/objects/Linea_de_Proyecto__c/validationRules/Solo_TM.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo_TM</fullName>
    <active>true</active>
    <errorConditionFormula>Oportunidad__r.RecordType.DeveloperName = &apos;TM&apos; &amp;&amp; RecordType.DeveloperName  &lt;&gt; &apos;TM&apos;</errorConditionFormula>
    <errorMessage>No es posible añadir una línea de proyecto de un tipo diferente a T&amp;M en una oportunidad de tipo T&amp;M</errorMessage>
</ValidationRule>