force-app/main/default/objects/Linea_de_Proyecto__c/validationRules/StartDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Fecha_Inicio__c &lt; Fecha_Cierre_Oportunidad__c</errorConditionFormula>
    <errorDisplayField>Fecha_Inicio__c</errorDisplayField>
    <errorMessage>The Project Start Date cannot be earlier than the Opportunity Close Date. Please provide a valid date.</errorMessage>
</ValidationRule>