force-app/main/default/objects/Linea_de_Proyecto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Oportunidad__c</columns>
    <columns>Area__c</columns>
    <columns>Gerencia__c</columns>
    <columns>Importe_total__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>