force-app/main/default/objects/Linea_de_Proyecto__c/listViews/Licencias_pendientes_asignar_responsable.listView-meta.xml
<ListView>
    <fullName>Licencias_pendientes_asignar_responsable</fullName>
    <columns>NAME</columns>
    <columns>Oportunidad__c</columns>
    <columns>Cliente__c</columns>
    <columns>Etapa__c</columns>
    <columns>Responsable_de_LDP__c</columns>
    <columns>Gerencia__c</columns>
    <columns>Area__c</columns>
    <columns>Tecnologia__c</columns>
    <columns>Fecha_Inicio__c</columns>
    <columns>Fecha_Fin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Linea_de_Proyecto__c.Licencias,Linea_de_Proyecto__c.Licencias_Renovaci_n</value>
    </filters>
    <filters>
        <field>Responsable_de_SW__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Etapa__c</field>
        <operation>notEqual</operation>
        <value>Cancelada,Perdida,Ganada</value>
    </filters>
    <filters>
        <field>Sede__c</field>
        <operation>equals</operation>
        <value>1000,VASS Madrid,1100,VASS Barcelona,1800</value>
    </filters>
    <label>Pending licenses to assign a responsible</label>
</ListView>