force-app/main/default/objects/Linea_de_Proyecto__c/listViews/Lineas_de_mi_area.listView-meta.xml
<ListView>
    <fullName>Lineas_de_mi_area</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Gerencia__c</columns>
    <columns>Importe_total_2__c</columns>
    <columns>Oportunidad__c</columns>
    <columns>Etapa__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SoyelGerente__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Lines of my management</label>
</ListView>