force-app/main/default/objects/Linea_de_Proyecto__c/listViews/Pendiente_asignar_JP_Preventa.listView-meta.xml
<ListView>
    <fullName>Pendiente_asignar_JP_Preventa</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Gerencia__c</columns>
    <columns>Area__c</columns>
    <columns>Oportunidad__c</columns>
    <columns>Importe_total_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Jefe_de_Proyecto_de_Preventa__c</field>
        <operation>equals</operation>
    </filters>
    <label>&quot;Pending assignment of Pre-sales PM</label>
</ListView>